# tensorflow

./: .gitignore
tensorflow/lite/: CMakeLists.txt
tensorflow/lite/kernels/internal/: spectrogram.cc
